--- a/assets/popucha.html
+++ b/assets/popucha.html
@@ -669,6 +669,6 @@
         feito com <i class="fa-regular fa-heart"></i> por <a href="#">Érica Lins</a>
     </footer>
 
-    <script src="/assets/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
