--- a/assets/popucha.html
+++ b/assets/popucha.html
@@ -430,7 +430,7 @@
             </span>
 
              <ul id="menu">
-                <li><a href="/index.html">Início</a></li>
+                <li><a href="./index.html">Início</a></li>
                 <!--<li><a href="#">contato</a></li>-->
             </ul>
         </nav>
