--- a/assets/popucha.html
+++ b/assets/popucha.html
@@ -10,6 +10,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+
     <title>Popucha - Érica lins</title>
 
     <style>
