--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/bd9b2dfa47.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
