style: correção de texto

--- a/pags/oncurso.html
+++ b/pags/oncurso.html
@@ -27,7 +27,7 @@
                         <h3>Responsabilidades</h3>
                         <p>
                             Condução de entrevistas, wireframes 
-                            em paple e digital, prototipagem de baixa e
+                            em papel e digital, prototipagem de baixa e
                             alta fidelidade, realização de estudos de usabilidade,
                             consideração de acessibilidade, iteração em designs, 
                             determinação de arquitetura da informação 
